# parallel_integral

./: .gitignore  CMakeLists.txt  integral.cc  integral.hh
dopusk/: Makefile  pipe  pipe.cc  shared  shared.cc
include/: integral.hh  stupid_integral.hh
source/: integral.cc  stupid_integral.cc
